// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> renders compact 1`] = `
<input
  className="input-0-2-1 input_compact-0-2-3"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders important 1`] = `
<input
  className="input-0-2-1 input_important-0-2-2"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders select compact 1`] = `
<select
  className="input-0-2-1 input_compact-0-2-3 select-0-2-12 select_compact-0-2-13"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> sets hidden 1`] = `
<input
  className="input-0-2-1 input_hidden-0-2-9"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports prefixes 1`] = `
<input
  className="input-0-2-1 input_hasPrefix-0-2-10"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports suffixes 1`] = `
<input
  className="input-0-2-1 input_hasSuffix-0-2-11"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;
